--- a/widget/build.gradle
+++ b/widget/build.gradle
@@ -36,9 +36,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    api 'com.facebook.fresco:fresco:1.3.0'
-    api 'com.facebook.fresco:imagepipeline-okhttp3:1.3.0'
-    api 'com.facebook.fresco:animated-gif:1.3.0'
-    api 'com.facebook.fresco:webpsupport:1.3.0'
-    api 'com.facebook.fresco:animated-webp:1.3.0'
+    api 'com.facebook.fresco:fresco:2.3.0'
+    api 'com.facebook.fresco:imagepipeline-okhttp3:2.3.0'
+    api 'com.facebook.fresco:animated-gif:2.3.0'
+    api 'com.facebook.fresco:webpsupport:2.3.0'
+    api 'com.facebook.fresco:animated-webp:2.3.0'
+    debugApi 'com.squareup.leakcanary:leakcanary-android:2.4'
 }
